Example: save data from a notebook to the data-raw folder

--- a/notebooks/develop/1.0-jmmz-exploratory-data-analysis.ipynb
+++ b/notebooks/develop/1.0-jmmz-exploratory-data-analysis.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,15 +25,20 @@
     "#Allows scripts and modules found within other folders to be used in this notebook.\n",
     "import os\n",
     "import sys\n",
-    "import pandas as pd\n",
-    "\n",
-    "from src.load_data import Load_data as ld\n",
     "\n",
     "package_path = os.path.abspath(os.path.join(f'..{os.sep}..'))\n",
     "if package_path not in sys.path:\n",
-    "    sys.path.append(package_path)\n",
-    "\n",
-    "    \n",
+    "    sys.path.append(package_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from src.load_data import Load_data as ld\n",
     "\n",
     "#Queries for load data from BQ\n",
     "q_relation_CBB_platform = \"\"\" \n",
@@ -46,6 +51,25 @@
     "#Using Load_data class to call data from BQ\n",
     "load = ld()\n",
     "df_relation = load.from_BigQuery(query=q_relation_CBB_platform, name_file=\"credentials_bq.json\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save data within data folder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from data.data_paths import Data\n",
+    "\n",
+    "path_data = Data().get_path(type=\"raw\")\n",
+    "df_relation.to_csv(path_or_buf = path_data + \"relation_cbb_platform.csv\", index=False)"
    ]
   }
  ],
