--- a/notebooks/develop/0.0-jmmz-example_notebook.ipynb
+++ b/notebooks/develop/0.0-jmmz-example_notebook.ipynb
@@ -21,8 +21,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Add the absolute path of the package within the paths in which python looks for modules, packages and functions.\n",
-    "#Allows scripts and modules found within other folders to be used in this notebook.\n",
+    "# Add the absolute path of the package within the paths in which python looks \n",
+    "# for modules, packages and functions.\n",
+    "# Allows scripts and modules found within other folders to be used in this notebook.\n",
     "import os\n",
     "import sys\n",
     "\n",
@@ -50,7 +51,8 @@
     "\n",
     "#Using Load_data class to call data from BQ\n",
     "load = ld()\n",
-    "df_relation = load.from_BigQuery(query=q_relation_CBB_platform, name_file=\"credentials_bq.json\")"
+    "df_relation = load.from_BigQuery(query=q_relation_CBB_platform, \n",
+    "                                  name_file=\"credentials_bq.json\")"
    ]
   },
   {
@@ -75,7 +77,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('env_HC_SAGRILAFT')",
+   "display_name": "Python 3.9.12 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -89,12 +91,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e0d0a39b9fff9a48c1a9045ef2608af35b06653a6c21f58017b684a28f0da35b"
+    "hash": "c73b41b33398381a63dda394fd0b0cb02413d3de08933cb9c9d1d83148e4d367"
    }
   }
  },
