Absolute path search no longer depends on file depth. Now you can find folders and files. The pertinent adjustments are made in the sample notebook, requriments.txt and load_data.py module

--- a/{{ cookiecutter.project_slug }}/notebooks/develop/0.0-jmmz-example_notebook.ipynb
+++ b/{{ cookiecutter.project_slug }}/notebooks/develop/0.0-jmmz-example_notebook.ipynb
@@ -17,113 +17,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Use this initial code to work in the notebook as if it were a module, that \n",
     "# is, to be able to export classes and functions from other subpackages.\n",
     "\n",
-    "import os\n",
+    "import pyprojroot\n",
     "import sys\n",
     "\n",
-    "package_path = os.path.abspath(os.path.join(f'..{os.sep}..'))\n",
+    "package_path = pyprojroot.here().__str__()\n",
     "if package_path not in sys.path:\n",
     "    sys.path.append(package_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id_punto</th>\n",
-       "      <th>referencia</th>\n",
-       "      <th>cod_detallista</th>\n",
-       "      <th>identificacion</th>\n",
-       "      <th>nombre</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>23004</td>\n",
-       "      <td>100000023004</td>\n",
-       "      <td>28381</td>\n",
-       "      <td>11284249364</td>\n",
-       "      <td>YYM</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>21955</td>\n",
-       "      <td>100000021955</td>\n",
-       "      <td>12382</td>\n",
-       "      <td>1769</td>\n",
-       "      <td>DANA</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>21950</td>\n",
-       "      <td>100000021950</td>\n",
-       "      <td>33789</td>\n",
-       "      <td>17310</td>\n",
-       "      <td>DACAR</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>45508</td>\n",
-       "      <td>100000045508</td>\n",
-       "      <td>17798</td>\n",
-       "      <td>63437041-8</td>\n",
-       "      <td>G Y M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>24264</td>\n",
-       "      <td>100000024264</td>\n",
-       "      <td>104525</td>\n",
-       "      <td>42982231</td>\n",
-       "      <td>KENCY</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  id_punto    referencia cod_detallista identificacion     nombre\n",
-       "0    23004  100000023004          28381    11284249364    YYM    \n",
-       "1    21955  100000021955          12382           1769   DANA    \n",
-       "2    21950  100000021950          33789          17310  DACAR    \n",
-       "3    45508  100000045508          17798     63437041-8  G Y M    \n",
-       "4    24264  100000024264         104525       42982231  KENCY    "
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from utils import Abs_paths, Load_data\n",
@@ -143,57 +56,45 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>data1</th>\n",
-       "      <th>data2</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>100</td>\n",
-       "      <td>300</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   data1  data2\n",
-       "0    100    300"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "Load_data().from_excel(type='raw', name_file='dummy_data.xlsx')"
+    "Upload csv or excel files using:\n",
+    "1. An absolute or relative path\n",
+    "2. Supplying the type of subfolder in data containing the file + the file name, \n",
+    "3. Using the file name only"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Option 1\n",
+    "path = 'G:\\My Drive\\ML_projects\\projects-template\\{{ cookiecutter.project_slug }}\\data\\dummy_data1.xlsx'\n",
+    "Load_data().from_excel(path=path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Option 2\n",
+    "Load_data().from_excel(type='raw', name_file='dummy_data2.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Option 2\n",
+    "Load_data().from_excel(name_file='dummy_data3.xlsx')"
    ]
   },
   {
@@ -205,18 +106,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_data = Abs_paths().get_absolute_path(folder_name='raw', deep=2)\n",
-    "df_relation.to_csv(path_or_buf = path_data + \"relation_cbb_platform.csv\", index=False)"
+    "path_raw_data = Abs_paths().get_abs_path_folder(folder_name='raw')\n",
+    "path_raw_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Note:**\n",
+    "If you have several folders or files with the same name, the method will return a list of the possible options for you to select the path of your interest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_raw_data = Abs_paths().get_abs_path_folder(folder_name='raw')\n",
+    "df_relation.to_csv(path_or_buf = path_raw_data + \"relation_cbb_platform.csv\", index=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('venv': venv)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -230,12 +149,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.12 (tags/v3.9.12:b28265d, Mar 23 2022, 23:52:46) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "79908180275a62526c67fb60a3154e769bfec5a7de255e31e6657abdc969e915"
+    "hash": "15701685d4c04922a5acfbded9ef3bd526d613395a4b7dc2a41bc1b8a065bc04"
    }
   }
  },
